refactor: remove deprecated function